...
              'Contact the research team if you experience technical problems or have questions.',
            ),
            
            SizedBox(height: 16),
            
            Text(
              'Research Mode:',
              style: TextStyle(fontWeight: FontWeight.bold, fontSize: 16, color: SouthAfricanTheme.researchMode),
            ),
            SizedBox(height: 8),
            
            _buildMenuOptionItem(
              Icons.assignment,
...
                children: [
                  Row(
                    children: [
                      Icon(Icons.lock, color: SouthAfricanTheme.privateMode),
                      SizedBox(width: 8),
                      Text(
                        'Private Mode',
                        style: TextStyle(
                          fontWeight: FontWeight.bold,
                          fontSize: 16,
                          color: SouthAfricanTheme.privateMode,
                        ),
                      ),
...
