...
              onPressed: () {
                userAccepted = false;
                Navigator.of(context).pop();
              },
            ),
            TextButton(
              child: const Text('Continue'),
              onPressed: () {
                userAccepted = true;
                Navigator.of(context).pop();
              },
            ),
          ],
...
